--- a/indek.html
+++ b/indek.html
@@ -4,13 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
-
     <!-- my css -->
     <link rel="stylesheet" href="/style.css" />
-    <title>home</title>
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
+    <title>Public Status</title>
   </head>
   <body id="home">
     <!-- navbar -->
@@ -23,16 +21,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/indek.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/works.html">Works</a>
+              <a class="nav-link" href="#projects">Works</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/hobby.html">Hobby</a>
+              <a class="nav-link" href="#hobby">Hobby</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https:\\detik.com">go website detik.com</a>
@@ -63,6 +61,147 @@
       </svg>
     </section>
     <!-- Akhir jumbotron -->
+
+    <!-- About -->
+    <section id="about">
+      <div class="container">
+        <div class="row text-center mb-3 text-white">
+          <div class="col">
+            <h1>About Me</h1>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center text-white">
+          <div class="col-md-4">
+            <p>Aku seorang siswa Smk Negeri 2 Surakarta yang berlokasi di Kota Surakarta,Jawa Tengah. Disini aku akan menceritakan 
+              pengalaman singkat yang ku miliki saat kecil diriku dikenal sebagai anak yang nakal, suka berkelahi, dan pemalas.
+              karena memiliki mata minus diriku hanya memiliki beberapa hobby seperti menggambar dan bermain catur. Ku juga memiliki dua saudara kandung, 1 kakak dan 1 adik</p>
+          </div>
+          <div class="col-md-4">
+            <p>Semenjak aku berusia 17 tahun aku mulai memiliki minat untuk mencari pengalaman dari orang lain dan teman dekat. Karena hobby saya menggambar Saya memiliki 
+              cita-cita sebagai Desain Grafis di sebuah perusahaan. Oleh karena itu saya mulai belajar dari berbagai sumber Internet yang ada dan saya mulai mengikuti beberapa Webinar dari sekolah</p>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#09393f" fill-opacity="1" d="M0,64L24,106.7C48,149,96,235,144,245.3C192,256,240,192,288,160C336,128,384,128,432,117.3C480,107,528,85,576,106.7C624,128,672,192,720,213.3C768,235,816,213,864,192C912,171,960,149,1008,138.7C1056,128,1104,128,1152,154.7C1200,181,1248,235,1296,234.7C1344,235,1392,181,1416,154.7L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
+    </section>
+
+    <!-- Akhir About -->
+    <!-- projek  -->
+    <section id="projects">
+      <div class="container">
+        <div class="row text-center mb-3 text-white">
+          <div class="col">
+            <h2>My Projects</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/programer.png" class="card-img-top" alt="Project 1" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/startup.jpeg" class="card-img-top" alt="Project 2" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/content-creator.jpg" class="card-img-top" alt="Project 3" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#085e59" fill-opacity="1" d="M0,96L24,117.3C48,139,96,181,144,213.3C192,245,240,267,288,266.7C336,267,384,245,432,213.3C480,181,528,139,576,144C624,149,672,203,720,208C768,213,816,171,864,154.7C912,139,960,149,1008,160C1056,171,1104,181,1152,202.7C1200,224,1248,256,1296,250.7C1344,245,1392,203,1416,181.3L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
+    <!-- akhir projek -->
+    
+    <!-- hobby -->
+    <section id="hobby">
+      <div class="container">
+        <div class="row text-center mb-3 text-white">
+          <div class="col">
+            <h2>My Hobby</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/catur.jpg" class="card-img-top" alt="Project 1" />
+              <div class="card-body">
+                <p class="card-text">
+                  permainan catur bagus untuk ingatan, kalkulasi, keterampilan visual-spasial, dan kemampuan berpikir kritis. Jelas hal ini dapat membantu mengurangi penurunan kognitif dan menunda efek demensia seiring bertambahnya usia.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/melukis.jpeg" class="card-img-top" alt="Project 2" />
+              <div class="card-body">
+                <p class="card-text">
+                  Melukis kegiatan mengolah medium dua dimensi atau juga permukaan dari objek tiga dimensi untuk mendapat kesan tertentu. Medium lukisan bisa bentuk apasaja, seperti kanvas, kertas, papan, dan tubuh bisa di anggap sebagai
+                  media lukisan.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#09393f" fill-opacity="1" d="M0,64L24,106.7C48,149,96,235,144,245.3C192,256,240,192,288,160C336,128,384,128,432,117.3C480,107,528,85,576,106.7C624,128,672,192,720,213.3C768,235,816,213,864,192C912,171,960,149,1008,138.7C1056,128,1104,128,1152,154.7C1200,181,1248,235,1296,234.7C1344,235,1392,181,1416,154.7L1440,128L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
+    </section>
+    <!-- akhir hobby-->
+  <!-- contact -->
+
+      <section id="contact">
+        <div class="container">
+          <div class="row text-center mb-3 text-white">
+            <div class="col">
+              <h2>Contact Me</h2>
+            </div>
+          </div>
+          <div class="row justify-content-center text-white">
+            <div class="col-md-6">
+              <form>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Nama Lengkap</label>
+                  <input type="text" class="form-control" id="name" aria-describedby="name" />
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" aria-describedby="email" />
+                </div>
+                <div class="mb-3">
+                  <label for="pesan" class="form-label">Pesan</label>
+                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary">kirim</button>
+              </form>
+            </div>
+          </div>
+        </div>
+   
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#085e59" fill-opacity="1" d="M0,32L17.1,53.3C34.3,75,69,117,103,144C137.1,171,171,181,206,181.3C240,181,274,171,309,154.7C342.9,139,377,117,411,128C445.7,139,480,181,514,165.3C548.6,149,583,75,617,80C651.4,85,686,171,720,186.7C754.3,203,789,149,823,154.7C857.1,160,891,224,926,240C960,256,994,224,1029,229.3C1062.9,235,1097,277,1131,256C1165.7,235,1200,149,1234,101.3C1268.6,53,1303,43,1337,64C1371.4,85,1406,139,1423,165.3L1440,192L1440,320L1422.9,320C1405.7,320,1371,320,1337,320C1302.9,320,1269,320,1234,320C1200,320,1166,320,1131,320C1097.1,320,1063,320,1029,320C994.3,320,960,320,926,320C891.4,320,857,320,823,320C788.6,320,754,320,720,320C685.7,320,651,320,617,320C582.9,320,549,320,514,320C480,320,446,320,411,320C377.1,320,343,320,309,320C274.3,320,240,320,206,320C171.4,320,137,320,103,320C68.6,320,34,320,17,320L0,320Z"></path></svg>
+    </section>
+
+    <!--akhir comen -->
+    <!-- footer -->
+    <footer class="bg-dark text-white text-center pb-1">
+      <p>Criated with love by <a href="Instagram" class="text-white fw-bold">Baharudin Fahrul-Solusite</a></p>
+    </footer>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
