--- a/indek.html
+++ b/indek.html
@@ -48,6 +48,7 @@
       <h2 class="display-4">Baharudin Fahrul Arif Setia Utomo</h2>
       <p class="lead">Saya adalah seorang pelajar | Seniman</p>
       <h3>my email</h3>
+      <a href=""><img src="" alt=""></a>
       <a href="https://web.facebook.com/baharudin.fahrul.7"><img src="/img/facebook (1).png" alt="fecebook" width="80px" class="rounded-circle img-thumbnail" /></a>
       <a href="https://discord.com/channels/@me"><img src="/img/discord (1).png" alt="discord" width="80px" class="rounded-circle img-thumbnail" /></a>
       <a href="https://www.instagram.com/invites/contact/?i=j4706kuxnlcy&utm_content=4ex86q3"><img src="/img/instagram.png" alt="instagram" width="80px" class="rounded-circle img-thumbnail" /></a>
@@ -99,7 +100,7 @@
             <div class="card">
               <img src="img/programer.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Programmer adalah sebuah jenis profesi atau pekerjaan yang bertujuan untuk membuat sebuah sistem menggunakan bahasa pemrograman. Seseorang yang memiliki skill menulis kode program (syntax) dan merancang sistem, bisa juga disebut programmer.</p>
               </div>
             </div>
           </div>
@@ -107,7 +108,7 @@
             <div class="card">
               <img src="img/startup.jpeg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Startup adalah perusahaan rintisan yang belum lama beroperasi. Dengan kata lain, startup artinya perusahaan yang baru masuk atau masih berada pada fase pengembangan atau penelitian untuk terus menemukan pasar meupun mengembangkan produknya.</p>
               </div>
             </div>
           </div>
@@ -115,7 +116,7 @@
             <div class="card">
               <img src="img/content-creator.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Content creator merupakan sebutan bagi seseorang yang melahirkan berbagai materi konten baik berupa tulisan, gambar, video, suara, maupun gabungan dari dua atau lebih materi. ... Konten yang kamu buat pun diharapkan bisa menjadi trend-setter.</p>
               </div>
             </div>
           </div>
